# fast_api3

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: crud.py  db.py  models.py  scheme.py
tables/: driver.py  fio.py  trip.py
